frontend/test/should_pass/basic_062.grg
using basic_model_002;

rule r {
	x : AA;

	replace {
		eval {
			x.ia = 42;
		}
	}
}

